# sangel_api

./: .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api_v1/: __init__.py  security.py
api_v1/auth/: shemas.py  utils.py  views.py
api_v1/contacts/: crud.py  dependencies.py  shemas.py  views.py
api_v1/notifications/: crud.py  dependencies.py  shemas.py  views.py
api_v1/status/: crud.py  dependencies.py  schemas.py  views.py
api_v1/status_names/: shemas.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  contact.py  db_helper.py  mixins.py  notification.py  status.py  status_name.py  user.py
